--- a/madre-paulina-ai-educational 2/netlify.toml
+++ b/madre-paulina-ai-educational 2/netlify.toml
@@ -1,32 +1,43 @@
+# --- INICIO DE netlify.toml ---
+# Este archivo anula la configuración de la Imagen 2.
+
 # --- Configuración de Build ---
-# Esto le dice a Netlify cómo construir tu sitio
+# Le dice a Netlify CÓMO construir tu sitio.
 [build]
 
   # 1. Directorio Base:
-  # Le dice a Netlify que "entre" a esta carpeta antes de hacer nada.
+  # ¡Esta es la línea más importante!
+  # Le dice a Netlify que "entre" a tu carpeta "frontend"
+  # antes de ejecutar cualquier comando.
   base = "frontend"
-
+  
   # 2. Comando de Build:
   # El comando que se debe ejecutar DENTRO de la carpeta "frontend".
-  # (Si tu agente usó pnpm, cambia esto a "pnpm run build")
+  # (Si tu agente usó "pnpm", cámbialo a "pnpm run build")
   command = "npm run build"
-
+  
   # 3. Directorio de Publicación:
   # La carpeta que Vite/React crea con el sitio final.
-  # (Esto es relativo a la carpeta "base" que definiste arriba)
+  # Es "dist" DENTRO de "frontend". (Como se ve en tu Imagen 1)
   publish = "dist"
-
+  
   # 4. Directorio de Funciones:
   # Dónde están tus funciones de backend.
-  # (Esto es relativo a la RAÍZ del repositorio)
+  # Esta ruta es relativa a la RAÍZ del repositorio, no a "base".
   functions = "netlify/functions"
 
 
 # --- Regla de Redirección (¡ESTO ARREGLA EL 404!) ---
-# Le dice a Netlify que para cualquier ruta que no encuentre (/*),
-# debe simplemente cargar el index.html y dejar que React Router
-# se encargue de mostrar la página correcta.
+# Le dice a Netlify que tu app es una SPA (Single Page Application).
 [[redirects]]
+  
+  # Para cualquier ruta que el navegador pida...
   from = "/*"
+  
+  #...sirve el archivo index.html...
   to = "/index.html"
+  
+  #...y mantén la URL en el navegador (no la cambies).
   status = 200
+
+# --- FIN DE netlify.toml ---
