--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,6 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-  },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
@@ -24,7 +23,8 @@
     "react-router-dom": "^6.20.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "@turbodocx/html-to-docx": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
