--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "@turbodocx/html-to-docx": "^1.1.0",
-    "puppeteer-core": "^22.0.0"
+    "puppeteer-core": "^22.0.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "chrome-aws-lambda": "^10.1.0"
   }
 }
